create table customers (
    id bigint not null,
    name varchar(255) not null,
    primary key (id)
);

create table dealerships (
    id bigint not null,
    name varchar(255) not null,
    primary key (id)
);

create table vehicles (
    id bigint not null,
    customer_id bigint not null,
    registration_number varchar(255) not null,
    primary key (id),
    constraint uk_vehicles_registration_number unique (registration_number),
    constraint fk_vehicles_customer foreign key (customer_id) references customers (id)
);

create table service_types (
    id bigint not null,
    code varchar(255) not null,
    name varchar(255) not null,
    duration_minutes bigint not null,
    primary key (id),
    constraint uk_service_types_code unique (code)
);

create table service_bays (
    id bigint not null,
    dealership_id bigint not null,
    name varchar(255) not null,
    primary key (id),
    constraint fk_service_bays_dealership foreign key (dealership_id) references dealerships (id)
);

create table technicians (
    id bigint not null,
    dealership_id bigint not null,
    name varchar(255) not null,
    primary key (id),
    constraint fk_technicians_dealership foreign key (dealership_id) references dealerships (id)
);

create table technician_qualifications (
    id bigint generated by default as identity,
    technician_id bigint not null,
    service_type_id bigint not null,
    primary key (id),
    constraint uk_technician_qualifications_technician_service unique (technician_id, service_type_id),
    constraint fk_technician_qualifications_technician foreign key (technician_id) references technicians (id),
    constraint fk_technician_qualifications_service_type foreign key (service_type_id) references service_types (id)
);

create table appointments (
    id uuid not null,
    customer_id bigint not null,
    vehicle_id bigint not null,
    dealership_id bigint not null,
    service_type_id bigint not null,
    service_type_code varchar(255) not null,
    technician_id bigint not null,
    service_bay_id bigint not null,
    start_time timestamp with time zone not null,
    end_time timestamp with time zone not null,
    status varchar(255) not null,
    created_at timestamp with time zone not null,
    primary key (id),
    constraint fk_appointments_customer foreign key (customer_id) references customers (id),
    constraint fk_appointments_vehicle foreign key (vehicle_id) references vehicles (id),
    constraint fk_appointments_dealership foreign key (dealership_id) references dealerships (id),
    constraint fk_appointments_service_type foreign key (service_type_id) references service_types (id),
    constraint fk_appointments_technician foreign key (technician_id) references technicians (id),
    constraint fk_appointments_service_bay foreign key (service_bay_id) references service_bays (id)
);

create index idx_appointments_dealer_time on appointments (dealership_id, start_time, end_time);
create index idx_appointments_bay_time on appointments (service_bay_id, start_time, end_time);
create index idx_appointments_tech_time on appointments (technician_id, start_time, end_time);
